--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
   "devDependencies": {
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.8.1"
+    "webpack-dev-server": "^4.8.1",
+    "css-loader": "^6.7.1",
+    "style-loader": "^3.3.1"
+  },
+  "dependencies": {
+    "swiper": "^8.1.4"
   }
 }
